--- a/package.json
+++ b/package.json
@@ -19,10 +19,14 @@
     "firebase": "^5.8.0",
     "lodash": "^4.17.11",
     "vue-image-upload-resize": "^2.0.4",
+    "vue-scrollto": "^2.15.0",
     "vue-shortkey": "^3.1.6",
     "vue-swatches": "^1.0.3"
   },
   "devDependencies": {
+    "eslint": "^5.16.0",
+    "eslint-config-google": "^0.12.0",
+    "eslint-plugin-vue": "^5.2.2",
     "quasar-cli": "^0.17.23",
     "strip-ansi": "=3.0.1"
   },
