--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "vue-image-upload-resize": "^2.0.4",
     "vue-scrollto": "^2.15.0",
     "vue-shortkey": "^3.1.6",
-    "vue-swatches": "^1.0.3"
+    "vue-swatches": "^1.0.3",
+    "vuedraggable": "^2.20.0"
   },
   "devDependencies": {
     "eslint": "^5.16.0",
