--- a/package.json
+++ b/package.json
@@ -10,30 +10,42 @@
     "test": "echo \"No test specified\" && exit 0"
   },
   "dependencies": {
-    "@ckeditor/ckeditor5-build-classic": "^12.0.0",
-    "@ckeditor/ckeditor5-vue": "^1.0.0-beta.1",
     "axios": "^0.18.0",
     "axois": "^1.0.0",
     "b64-to-blob": "^1.2.19",
     "fabric": "^2.7.0",
     "firebase": "^5.8.0",
     "lodash": "^4.17.11",
+    "npm": "^6.9.0",
+    "quill-blot-formatter": "^1.0.5",
+    "raw-loader": "^0.5.1",
+    "vue-draggable-resizable": "^2.0.0-rc1",
     "vue-image-upload-resize": "^2.0.4",
+    "vue-quill-editor": "^3.0.6",
     "vue-scrollto": "^2.15.0",
     "vue-shortkey": "^3.1.6",
     "vue-swatches": "^1.0.3",
     "vuedraggable": "^2.20.0"
   },
   "devDependencies": {
+    "devtron": "1.4.0",
+    "electron": "3.0.8",
+    "electron-debug": "2.0.0",
+    "electron-devtools-installer": "2.2.4",
     "eslint": "^5.16.0",
     "eslint-config-google": "^0.12.0",
     "eslint-plugin-vue": "^5.2.2",
+    "postcss-load-config": "^2.0.0",
+    "postcss-loader": "^3.0.0",
     "quasar-cli": "^0.17.23",
     "strip-ansi": "=3.0.1"
   },
   "engines": {
     "node": ">= 8.9.0",
     "npm": ">= 5.6.0"
+  },
+  "config": {
+    "install.ignore-engines": true
   },
   "browserslist": [
     "> 1%",
