--- a/package.json
+++ b/package.json
@@ -34,8 +34,12 @@
     "electron": "3.0.8",
     "electron-debug": "2.0.0",
     "electron-devtools-installer": "2.2.4",
-    "eslint": "^5.16.0",
+    "eslint": "^5.3.0",
+    "eslint-config-airbnb": "^17.1.0",
     "eslint-config-google": "^0.12.0",
+    "eslint-plugin-import": "^2.17.3",
+    "eslint-plugin-jsx-a11y": "^6.2.1",
+    "eslint-plugin-react": "^7.13.0",
     "eslint-plugin-vue": "^5.2.2",
     "postcss-load-config": "^2.0.0",
     "postcss-loader": "^3.0.0",
