--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "npm": "^6.9.0",
     "pdfmake": "^0.1.56",
     "quill-blot-formatter": "^1.0.5",
+    "quill-cursors": "^2.1.1",
     "raw-loader": "^0.5.1",
+    "signature_pad": "^3.0.0-beta.3",
     "vue-draggable-resizable": "^2.0.0-rc1",
     "vue-html2canvas": "0.0.4",
     "vue-image-upload-resize": "^2.0.4",
