--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "lodash": "^4.17.11",
     "npm": "^6.9.0",
     "pdfmake": "^0.1.56",
+    "quill-better-table": "^1.1.13",
     "quill-blot-formatter": "^1.0.5",
     "quill-cursors": "^2.1.1",
     "raw-loader": "^0.5.1",
