--- a/package.json
+++ b/package.json
@@ -13,24 +13,25 @@
     "axios": "^0.18.0",
     "axois": "^1.0.0",
     "b64-to-blob": "^1.2.19",
-    "fabric": "^2.7.0",
+    "fabric": "^3.3.2",
     "firebase": "^5.8.0",
     "lodash": "^4.17.11",
     "npm": "^6.9.0",
-    "pdfmake": "^0.1.56",
+    "pdfmake": "^0.1.58",
+    "quill": "^2.0.0-dev.3",
     "quill-better-table": "^1.1.13",
     "quill-blot-formatter": "^1.0.5",
     "quill-cursors": "^2.1.1",
     "raw-loader": "^0.5.1",
     "signature_pad": "^3.0.0-beta.3",
-    "vue-draggable-resizable": "^2.0.0-rc1",
+    "vue-draggable-resizable": "^2.0.0-rc2",
     "vue-html2canvas": "0.0.4",
     "vue-image-upload-resize": "^2.0.4",
-    "vue-quill-editor": "^3.0.6",
+    "vue-quill-editor": "https://github.com/chrisj74/vue-quill-editor/tarball/8442324fc3f47e5e53bb4ef418025824e9e74bfb",
     "vue-scrollto": "^2.15.0",
     "vue-shortkey": "^3.1.6",
-    "vue-swatches": "^1.0.3",
-    "vuedraggable": "^2.20.0"
+    "vue-swatches": "^1.0.4",
+    "vuedraggable": "^2.23.0"
   },
   "devDependencies": {
     "devtron": "1.4.0",
@@ -46,7 +47,7 @@
     "eslint-plugin-vue": "^5.2.2",
     "postcss-load-config": "^2.0.0",
     "postcss-loader": "^3.0.0",
-    "quasar-cli": "^0.17.23",
+    "quasar-cli": "^0.17.26",
     "strip-ansi": "=3.0.1"
   },
   "engines": {
