--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "vue-scrollto": "^2.15.0",
     "vue-shortkey": "^3.1.6",
     "vue-swatches": "^1.0.4",
-    "vuedraggable": "^2.23.0"
+    "vuedraggable": "^2.23.0",
+    "vuelidate": "^0.7.4"
   },
   "devDependencies": {
     "devtron": "1.4.0",
