--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "test": "echo \"No test specified\" && exit 0"
   },
   "dependencies": {
+    "@vimeo/player": "^2.10.0",
     "axios": "^0.18.0",
     "axois": "^1.0.0",
     "b64-to-blob": "^1.2.19",
