--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,7 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 /src/statics/workalongo-test
+/src/assets/bruit-config.json
 
 # Editor directories and files
 .idea
