chg: fed: video url parser + fixes

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "b64-to-blob": "^1.2.19",
     "fabric": "^3.3.2",
     "firebase": "^6.6.2",
+    "get-video-id": "^3.1.4",
     "lodash": "^4.17.11",
     "npm": "^6.9.0",
     "pdfmake": "^0.1.58",
