--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "quill-cursors": "^2.1.1",
     "raw-loader": "^0.5.1",
     "signature_pad": "^3.0.0-beta.3",
+    "uuidv4": "^5.0.1",
     "vue-croppa": "^1.3.8",
     "vue-draggable-resizable": "^2.0.0-rc2",
     "vue-html2canvas": "0.0.4",
