--- a/package.json
+++ b/package.json
@@ -16,16 +16,13 @@
     "axios": "^0.18.0",
     "axois": "^1.0.0",
     "b64-to-blob": "^1.2.19",
-    "fabric": "^3.3.2",
+    "fabric-with-gestures": "^3.4.0",
     "firebase": "^6.6.2",
     "get-video-id": "^3.1.4",
     "lodash": "^4.17.11",
     "npm": "^6.9.0",
     "pdfmake": "^0.1.58",
-    "quill": "^2.0.0-dev.3",
     "quill-better-table": "^1.1.13",
-    "quill-blot-formatter": "^1.0.5",
-    "quill-cursors": "^2.1.1",
     "raw-loader": "^0.5.1",
     "signature_pad": "^3.0.0-beta.3",
     "uuidv4": "^5.0.1",
@@ -34,7 +31,6 @@
     "vue-html2canvas": "0.0.4",
     "vue-image-upload-resize": "^2.0.4",
     "vue-owl-carousel": "^2.0.3",
-    "vue-quill-editor": "https://github.com/chrisj74/vue-quill-editor/tarball/8442324fc3f47e5e53bb4ef418025824e9e74bfb",
     "vue-scrollto": "^2.15.0",
     "vue-shortkey": "^3.1.6",
     "vue-swatches": "^1.0.4",
