chg: fed: mobile styling

--- a/package.json
+++ b/package.json
@@ -11,12 +11,13 @@
   },
   "dependencies": {
     "@bruit/component": "github:chrisj74/bruit.io",
+    "@egjs/hammerjs": "^2.0.16",
     "@tinymce/tinymce-vue": "^3.0.1",
     "@vimeo/player": "^2.10.0",
     "axios": "^0.18.0",
     "axois": "^1.0.0",
     "b64-to-blob": "^1.2.19",
-    "fabric-with-gestures": "^3.4.0",
+    "fabric-with-gestures": "^3.5.0",
     "firebase": "^6.6.2",
     "get-video-id": "^3.1.4",
     "lodash": "^4.17.11",
