chg: fed: web search and view - no bruit

--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,7 @@ yarn-error.log*
 /src/statics/workalongo-test
 /src/assets/bruit-config.json
 /src/assets/youtubeApi.js
+/cloud-functions/functions/config.js
 
 # Editor directories and files
 .idea
