--- a/package.json
+++ b/package.json
@@ -20,12 +20,14 @@
     "fabric-with-gestures": "^3.5.0",
     "firebase": "^6.6.2",
     "get-video-id": "^3.1.4",
+    "glob": "^7.1.6",
     "lodash": "^4.17.13",
     "npm": "^6.9.0",
     "pdfmake": "^0.1.58",
     "quill-better-table": "^1.1.13",
     "raw-loader": "^0.5.1",
     "signature_pad": "^3.0.0-beta.3",
+    "unirest": "^0.6.0",
     "uuidv4": "^5.0.1",
     "vue-croppa": "^1.3.8",
     "vue-draggable-resizable": "^2.0.0-rc2",
